# ColorSplit3mf

./: .gitignore  DEBUG_USAGE.md  PYRE_SETUP.md  README.md  SETUP.md  color_split_enhanced.py  debug_colors.py  example_usage.py  pyproject.toml  test_setup.py
.github/workflows/: typecheck.yml
content/: Hinged-Locked-Chest_MultiColor.3mf
